Aligning the spinner

--- a/src/main/webapp/css/pac.css
+++ b/src/main/webapp/css/pac.css
@@ -13,3 +13,10 @@
 .tagged-with {
   font-style: italic;
 }
+
+.spinner {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding-top: 1em;
+}
