--- a/src/main/webapp/css/pac.css
+++ b/src/main/webapp/css/pac.css
@@ -1,5 +1,6 @@
 .header-img {
   max-width: 50px;
+  margin-right: 0.9375rem;
 }
 
 .panel h6 {
@@ -21,22 +22,16 @@
   padding-top: 1em;
 }
 
-@media only screen and (max-width: 40em) {
-  .column,
-  .columns {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
+.pac-title {
+  white-space: nowrap;
+}
 
+@media only screen and (max-width: 40em) {
   .button {
     padding-top: 0.875rem;
     padding-right: 1.75rem;
     padding-bottom: 0.9375rem;
     padding-left: 1.75rem;
     font-size: 0.8125rem;
-  }
-
-  .pac-title {
-    float: left;
   }
 }
