--- a/src/main/webapp/css/pac.css
+++ b/src/main/webapp/css/pac.css
@@ -15,6 +15,12 @@
   font-style: italic;
 }
 
+img.center {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 .spinner {
   margin-left: auto;
   margin-right: auto;
